fix(mw): auth middlewares
