# docs/swagger.json
@@ -34,6 +34,43 @@
                 }
             }
         },
+        "/auth/refresh": {
+            "get": {
+                "description": "Reset Password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Reset",
+                "parameters": [
+                    {
+                        "type": "boolean",
+                        "description": "If true, returns User in body",
+                        "name": "user",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "If true, returns AccessToken and SessionID in body",
+                        "name": "cookies",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "RefreshTokenResponse",
+                        "schema": {
+                            "$ref": "#/definitions/RefreshTokenResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/signin": {
             "get": {
                 "security": [
@@ -182,9 +219,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "EmailVerificationResponse",
+                        "description": "Success message",
                         "schema": {
-                            "$ref": "#/definitions/EmailVerificationResponse"
+                            "type": "string"
                         }
                     }
                 }
@@ -207,7 +244,7 @@
                             "github"
                         ],
                         "type": "string",
-                        "description": "OAuth provider name",
+                        "description": "OAuth provider name [google,github]",
                         "name": "provider",
                         "in": "path",
                         "required": true
@@ -366,14 +403,6 @@
         }
     },
     "definitions": {
-        "EmailVerificationResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
         "HealthResponse": {
             "type": "object",
             "properties": {
@@ -394,6 +423,23 @@
                 },
                 "uptime": {
                     "type": "string"
+                }
+            }
+        },
+        "RefreshTokenResponse": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "sessionID": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/User"
                 }
             }
         },
